2012-02-11 Philipp Klaus Krause <pkk AT spth.de>

	* support/regression/tests/gcc-torture-execute-pr20601-1.c:
	  Disabled test for host, since _Noreturn support is required.
	* support/regression/tests/gcc-torture-execute-pr23047.c:
	  Removed test, since it seems to test for implementation-defined behaviour.

2012-02-10 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/z80/ralloc2.cc,
	  src/z80/gen.c:
	  Increase flexibility of handling of register pair hl over function calls.

2012-02-10 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* support/regression/tests/*
	  Added some more tests from the execute part of the gcc torture regression test suite.

2012-02-10 Borut Razem <borut.razem AT gmail.com>

	* configure, Makefile.in, configure.in, sdccconf_in.h,
	  device/lib/z180/Makefile.in, device/lib/small/Makefile.in,
	  device/lib/z80/Makefile.in, device/lib/gbz80/Makefile.in,
	  device/lib/ds390/Makefile.in, device/lib/medium/Makefile.in,
	  device/lib/Makefile.in, device/lib/ds400/Makefile.in,
	  device/lib/mcs51/Makefile.in, device/lib/huge/Makefile.in,
	  device/lib/large/Makefile.in, device/lib/r2k/Makefile.in,
	  device/lib/hc08/Makefile.in, Makefile.common.in,
	  support/scripts/sdcc.nsi, support/sdbinutils/*:
	  device/lib/z180/Makefileadded sdbinutils: sdar and sdranlib
	* device/lib/z180/Makefile:
	  deleted, generated from device/lib/z180/Makefile.in

2012-02-09 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/z,80/gen.c:
	  Fix for yesterdays addition improvement, decide in which pair
          to increment in code generator instead of peephole optimizer.

2012-02-08 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/z80/gen.c,
	  src/z80/peeph-z80.def:
	  Minor addition improvement.

2012-02-08 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/z80/gen.c:
	  Use bit instruction for & in jump condition.
	* src/z80/peep.c,
	  src/z80/peeph-z80.def: